--- a/app/src/main/res/layout/activity_introduce2.xml
+++ b/app/src/main/res/layout/activity_introduce2.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".Introduce1">
+    tools:context=".Introduce2">
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -12,9 +12,9 @@
         <ImageView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:src="@drawable/img_intro1"
-            android:paddingTop="80dp"
-            android:paddingBottom="101dp"/>
+            android:src="@drawable/img_intro2"
+            android:paddingTop="75dp"
+            android:paddingBottom="90dp"/>
         <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -23,14 +23,14 @@
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Đặt hàng"
+                android:text="Tận hưởng"
                 android:textSize="30sp"
                 android:fontFamily="@font/poppins_bold"
                 android:layout_gravity="center"/>
             <TextView
                 android:layout_width="334dp"
                 android:layout_height="wrap_content"
-                android:text="Tìm kiếm món ăn yêu thích của bạn và đặt hàng chỉ vài thao tác đơn giản"
+                android:text="Thưởng thức món ăn yêu thích của bạn với ứng dụng của chúng tôi"
                 android:fontFamily="@font/roboto_regular"
                 android:textSize="20sp"
                 android:textAlignment="center"
@@ -38,23 +38,23 @@
             <LinearLayout
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginBottom="40dp"
+                android:layout_marginBottom="100dp"
                 android:layout_gravity="center">
                 <LinearLayout
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:background="@drawable/point_introduce2"
+                    android:background="@drawable/point_introduce"
                     />
                 <LinearLayout
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:background="@drawable/point_introduce"
+                    android:background="@drawable/point_introduce2"
                     android:layout_marginLeft="17dp"/>
             </LinearLayout>
             <com.google.android.material.button.MaterialButton
                 android:layout_width="284dp"
                 android:layout_height="wrap_content"
-                android:text="Tiếp tục"
+                android:text="Bắt đầu"
                 android:paddingVertical="10dp"
                 android:fontFamily="@font/roboto_regular"
                 android:textSize="18sp"
@@ -63,15 +63,7 @@
                 app:cornerRadius="20dp"
                 />
 
-            <com.google.android.material.button.MaterialButton
-                android:layout_width="wrap_content"
-                android:layout_height="34dp"
-                android:layout_gravity="center"
-                android:layout_marginTop="65dp"
-                android:paddingVertical="0dp"
-                android:text="Bỏ qua"
-                android:textColor="@color/black"
-                android:background=""/>
+
         </LinearLayout>
 
 
